package com.m2i.poe.media;

import java.util.ArrayList;

public class Media2 implements IMedia {
    @Override
    public double getPrice() {
        return 0;
    }

    @Override
    public void setPrice(double price) {

    }

    @Override
    public int getId() {
        return 0;
    }

    @Override
    public void setId(int id) {

    }

    @Override
    public String getTitle() {
        return null;
    }

    @Override
    public void setTitle(String title) {

    }

    @Override
    public double getNetPrice() {
        return 0;
    }

    @Override
    public Publisher getPublisher() {
        return null;
    }

    @Override
    public void setPublisher(Publisher publisher) {

    }

    @Override
    public ArrayList<Author> getAuthorList() {
        return null;
    }

    @Override
    public void setAuthorList(ArrayList<Author> authorList) {

    }
}
