@startuml

title __JAVA's Class Diagram__\n

  package com.m2i.poe {
    package com.m2i.poe.genetic {
      class ARN {
      }
    }
  }
  

  package com.m2i.poe {
    package com.m2i.poe.bank {
      class Account {
      }
    }
  }
  

  package com.m2i.poe {
    package com.m2i.poe.genetic {
      class AminoAcid {
      }
    }
  }
  

  package com.m2i.poe {
    package com.m2i.poe.media {
      class Author {
      }
    }
  }
  

  package com.m2i.poe {
    package com.m2i.poe.genetic {
      class Base {
      }
    }
  }
  

  package com.m2i.poe {
    package com.m2i.poe.media {
      class Book {
      }
    }
  }
  

  package com.m2i.poe {
    package com.m2i.poe.geometry {
      class Carre {
      }
    }
  }
  

  package com.m2i.poe {
    package com.m2i.poe.media {
      class Cart {
      }
    }
  }
  

  package com.m2i.poe {
    package com.m2i.poe.media {
      class Cd {
      }
    }
  }
  

  package com.m2i.poe {
    package com.m2i.poe.bank {
      class Customer {
      }
    }
  }
  

  package com.m2i.poe {
    package com.m2i.poe.genetic {
      class DNA {
      }
    }
  }
  

  package com.m2i.poe {
    package com.m2i.poe.media {
      class Dvd {
      }
    }
  }
  

  package com.m2i.poe {
    package com.m2i.poe.media {
      interface IMedia {
      }
    }
  }
  

  package com.m2i.poe {
    class Main {
    }
  }
  

  package com.m2i.poe {
    package com.m2i.poe.bank {
      class Main {
      }
    }
  }
  

  package com.m2i.poe {
    package com.m2i.poe.genetic {
      class Main {
      }
    }
  }
  

  package com.m2i.poe {
    package com.m2i.poe.media {
      abstract class Media {
      }
    }
  }
  

  package com.m2i.poe {
    package com.m2i.poe.media {
      class Media2 {
      }
    }
  }
  

  package com.m2i.poe {
    package com.m2i.poe.media {
      class MediaMain {
      }
    }
  }
  

  package com.m2i.poe {
    package com.m2i.poe.geometry {
      class Point {
      }
    }
  }
  

  package com.m2i.poe {
    package com.m2i.poe.geometry {
      class Point3d {
      }
    }
  }
  

  package com.m2i.poe {
    package com.m2i.poe.geometry {
      class Program {
      }
    }
  }
  

  package com.m2i.poe {
    package com.m2i.poe.media {
      class Publisher {
      }
    }
  }
  

  package com.m2i.poe {
    package com.m2i.poe.geometry {
      class Rectangle {
      }
    }
  }
  

  package com.m2i.poe {
    package com.m2i.poe.bank {
      class Transaction {
      }
    }
  }
  

  package com.m2i.poe {
    package com.m2i.poe.geometry {
      class TriangleRectangle {
      }
    }
  }
  

  Account o-- Customer : customer
  Book -up-|> Media
  Carre -up-|> Rectangle
  Cd -up-|> Media
  Dvd -up-|> Media
  Media -up-|> IMedia
  Media o-- Publisher : publisher
  Media2 -up-|> IMedia
  Point3d -up-|> Point
  Rectangle o-- Point : origin
  Transaction o-- Account : fromAccount
  Transaction o-- Account : toAccount
  TriangleRectangle -up-|> Rectangle


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
